--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.5/schema.json",
   "formatter": {
     "enabled": true,
     "useEditorconfig": true
@@ -13,7 +13,8 @@
       },
       "complexity": {
         "noUselessStringConcat": "error",
-        "noUselessUndefinedInitialization": "error"
+        "noUselessUndefinedInitialization": "error",
+        "useNumericLiterals": "error"
       },
       "correctness": {
         "noUndeclaredVariables": "error",
@@ -21,14 +22,10 @@
         "noUnusedFunctionParameters": "error",
         "noUnusedImports": "error",
         "noUnusedVariables": "error",
-        "useArrayLiterals": "error",
-        "useHookAtTopLevel": "error"
+        "useHookAtTopLevel": "error",
+        "noUnknownTypeSelector": "error"
       },
-      "nursery": {
-        "noDuplicateProperties": "error",
-        "noUnknownTypeSelector": "error",
-        "useCollapsedIf": "error"
-      },
+      "nursery": {},
       "security": {
         "noDangerouslySetInnerHtml": "warn"
       },
@@ -40,7 +37,6 @@
         "noCommaOperator": "error",
         "useNodejsImportProtocol": "error",
         "useAsConstAssertion": "error",
-        "useNumericLiterals": "error",
         "useEnumInitializers": "error",
         "useSelfClosingElements": "error",
         "useConst": "error",
@@ -56,12 +52,15 @@
         "useImportType": "error",
         "useExportType": "error",
         "noUselessElse": "error",
-        "useShorthandFunctionType": "error"
+        "useShorthandFunctionType": "error",
+        "useCollapsedIf": "error",
+        "useArrayLiterals": "error"
       },
       "suspicious": {
         "noArrayIndexKey": "warn",
         "noAssignInExpressions": "off",
-        "useErrorMessage": "error"
+        "useErrorMessage": "error",
+        "noDuplicateProperties": "error"
       }
     }
   },
